[package]
name = "hanzo-ml"
version = "0.11.18"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
hanzo-kernels = { workspace = true, optional = true }
hanzo-metal-kernels = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
rocm-rs = { workspace = true, optional = true }
hanzo-rocm-kernels = { workspace = true, optional = true }
ash = { version = "0.38", optional = true }
wgpu = { version = "22", optional = true }
pollster = { version = "0.3", optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
libm = { workspace = true }
memmap2 = { workspace = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { workspace = true, features = ["onig"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
hanzo-ug = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
default = []
cuda = ["cudarc", "dep:hanzo-kernels", "hanzo-ug?/cuda"]
cudnn = ["cuda", "cudarc/cudnn"]
nccl = ["cuda", "cudarc/nccl"]
rocm = ["dep:rocm-rs", "dep:hanzo-rocm-kernels"]
# MIOpen-backed conv ops (conv1d/conv2d/conv_transpose1d). Off by default: MIOpen
# ships in the Linux ROCm SDK but NOT the Windows ROCm 7.x SDK. Enable on a ROCm
# install that includes MIOpen to get GPU conv; LLM inference does not need it.
rocm-miopen = ["rocm-rs/miopen"]
vulkan = ["dep:ash"]
wgpu = ["dep:wgpu", "dep:pollster"]
mkl = ["dep:libc", "dep:intel-mkl-src"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = [
    "dep:hanzo-metal-kernels",
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "hanzo-ug?/metal",
]
ug = ["dep:hanzo-ug"]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]

[[example]]
name = "cuda_basics"
required-features = ["cuda"]

[lints]
workspace = true
