[package]
name = "hanzo-nn"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
hanzo-ml = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
objc2-metal = { workspace = true, optional = true }
hanzo-metal-kernels = { workspace = true, optional = true }
libc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "hanzo-ml/accelerate"]
cuda = ["hanzo-ml/cuda"]
cudnn = ["hanzo-ml/cudnn"]
mkl = ["dep:intel-mkl-src", "hanzo-ml/mkl"]
metal = ["hanzo-ml/metal", "dep:hanzo-metal-kernels", "dep:objc2-metal"]

[[bench]]
name = "bench_main"
harness = false
