[package]
name = "hanzo-onnx"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
hanzo-ml = { path = "../hanzo-ml", package = "hanzo-ml", version = "0.9.2-alpha.2" }
hanzo-ml-nn = { path = "../hanzo-ml-nn", version = "0.9.2-alpha.2" }
prost = "0.12.1"

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
