[package]
name = "hanzo-rocm-kernels"
version = "0.11.1"
license = "MIT OR Apache-2.0"
edition = "2021"

description = "ROCm/HIP kernels for Hanzo"

[dependencies]
dirs = "5"
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
] }
rocm-rs = { version = "0.5", default-features = false, features = ["macros"] }
sha2 = "0.10"
thiserror = "2"
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.49", features = ["derive"] }
anyhow = "1"
rand = "0.9.2"
rand_distr = "0.5.1"

[profile.profiling]
inherits = "release"
debug = 2
