[package]
name = "hanzo-training"
version = "0.9.2-alpha.2"
edition = "2021"
description = "Training framework for Hanzo ML models on zen-agentic-dataset"
repository = "https://github.com/hanzoai/ml"
keywords = ["machine-learning", "training", "transformer", "llm"]
categories = ["science", "algorithms"]
license = "BSD-3-Clause OR Apache-2.0"
readme = "README.md"

[dependencies]
hanzo-ml = { workspace = true }
hanzo-nn = { workspace = true }
hanzo-transformers = { workspace = true }
hanzo-datasets = { workspace = true }
hanzo-ug = { workspace = true, optional = true }

# Core dependencies
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { workspace = true }

# Configuration
# Configuration
chrono = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

# Training specific
rand = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }

# Progress and metrics
indicatif = "0.17"
# wandb = { version = "0.1", optional = true }  # Commented out for now

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
cuda = ["hanzo-ml/cuda", "hanzo-nn/cuda"]
metal = ["hanzo-ml/metal", "hanzo-nn/metal"]
# wandb = ["dep:wandb"]  # Commented out for now
ug = ["dep:hanzo-ug", "hanzo-ml/ug"]

[[bin]]
name = "hanzo-train"
path = "src/bin/train.rs"

[[bin]]
name = "hanzo-eval"
path = "src/bin/eval.rs"

[[example]]
name = "train_llama"
path = "examples/train_llama.rs"

[[example]]
name = "train_qwen"
path = "examples/train_qwen.rs"