[package]
name = "hanzo-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
hanzo-ml = { workspace = true }
hanzo-flash-attn = { workspace = true, optional = true }
hanzo-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "hanzo-ml/accelerate", "hanzo-nn/accelerate"]
cuda = ["hanzo-ml/cuda", "hanzo-nn/cuda"]
cudnn = ["hanzo-ml/cudnn", "hanzo-nn/cudnn"]
flash-attn = ["cuda", "dep:hanzo-flash-attn"]
mkl = ["dep:intel-mkl-src", "hanzo-ml/mkl", "hanzo-nn/mkl"]
metal = ["hanzo-ml/metal", "hanzo-nn/metal"]
