[package]
name = "hanzo-transformers"
version = "0.9.2-alpha.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
hanzo-ml = { workspace = true }
hanzo-flash-attn = { workspace = true, optional = true }
hanzo-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "hanzo-ml/accelerate", "hanzo-nn/accelerate"]
cuda = ["hanzo-ml/cuda", "hanzo-nn/cuda"]
cudnn = ["hanzo-ml/cudnn", "hanzo-nn/cudnn"]
flash-attn = ["cuda", "dep:hanzo-flash-attn"]
mkl = ["dep:intel-mkl-src", "hanzo-ml/mkl", "hanzo-nn/mkl"]
metal = ["hanzo-ml/metal", "hanzo-nn/metal"]
