[package]
name = "tensor-tools"
version = "0.9.2-alpha.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
hanzo-ml = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
