[package]
name = "hanzo-ml-wasm-example-llama2"
version = "0.11.8"
edition = "2021"
description = "Multi-backend tensor & ML framework for Rust — part of the Hanzo ML stack."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "BSD-3-Clause OR Apache-2.0"

[dependencies]
hanzo-ml = { workspace = true }
hanzo-nn = { workspace = true }
hanzo-transformers = { workspace = true }
num-traits = { workspace = true }
tokenizers = { workspace = true, features = ["unstable_wasm"] }

# App crates.
anyhow = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.11"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2"
yew-agent = "0.2.0"
yew = { version = "0.23.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.70"
features = [
  'Blob',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Request',
  'RequestCache',
  'RequestInit',
  'RequestMode',
  'Response',
  'Performance',
]
