[package]
name = "hanzo-ml-wasm-example-sam"
version = "0.9.2-alpha.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/hanzoai/ml"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
hanzo-ml = { workspace = true }
hanzo-nn = { workspace = true }
hanzo-transformers = { workspace = true }
num-traits = { workspace = true }

# App crates.
anyhow = { workspace = true }
byteorder = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
image = { workspace = true }
log = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.0"
